SERVER-5 add logging